tests/errors/lambda_type_error.ceos
fn _(a: Int) -> Int { a } ("foo")
